@@ -15,14 +15,6 @@ system (for unknown, but legitimate senders).  TMDA strives to be more
 effectual, yet less time-consuming than traditional filters.
 <br><br>
 
-TMDA's functionality is based upon the following assumptions about the
-current Internet infrastructure:<br>
-<ol>
-<li>You cannot keep your email address secret from spammers.<br>
-<li>Content-based filters can't distinguish spam from legitimate mail with sufficient accuracy.<br>
-<li>Spam will not cease until it becomes prohibitively expensive for spammers to operate.<br><br>
-</ol>
-
 <u>TMDA's Whitelist-centric Strategy</u>&nbsp;&nbsp;
 <strong>``Deny everything that is not <em>explicitly allowed</em>''</strong><br>
 <br>
@@ -74,4 +66,17 @@ higher with this more complex approach.  If you really want effective
 and reliable UCE control, you need something like TMDA that doesn't rely on
 heuristics that spammers can work around.  <br><br>
 </ul>
+
+TMDA's functionality is based upon the following assumptions about the
+current Internet infrastructure:<br>
+<ol>
+<li>You cannot keep your email address secret from spammers.<br>
+<li>Content-based filters can't distinguish spam from legitimate mail with sufficient accuracy.<br>
+<li>To maintain economies of scale, bulk-mailing is generally:
+<ul>
+    <li>An impersonal process where the recipient is not distinguished<br>
+    <li>A one-way communication channel (from spammer to victim)<br>
+</ul>
+<li>Spam will not cease until it becomes prohibitively expensive for spammers to operate.<br><br>
+</ol>
 
