@@ -1,5 +1,8 @@
 2001-12-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
+	* index.ht (Links): Move philosophical bit to the end of the page,
+	and also add bulk-mail characteristics to the assumptions section.
+	
 	* download.ht (Links): Remove stale mirrors.
 
 2001-12-02  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
